tests/miniJava/neg/004373_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public 0 java ( ) { return 0 ; } }
